--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -230,7 +230,7 @@ figure {
       <h3>Overview Dashboard for Recyclable Bins</h3>
       <p>Last refreshed: <span id = "datetime"></span></p>
     </div>
-<button class="accordion"><h3 style="margin: 0">Alert: {{alertlist.length}}</h3></button>
+<button class="accordion"><h3 style="margin: 0" id="alertheader">Alert: {{alertlist.length}}</h3></button>
     <div class="panel">
       <div class="row">
         {{#each alertlist}}
@@ -239,7 +239,7 @@ figure {
                 <span>
                 <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
                 <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
-                <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
+                <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
                 
                 <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
                 <br>
@@ -260,7 +260,7 @@ figure {
       </div>
     </div>
 
-    <button class="accordion"><h3 style="margin: 0">Danger: {{dangerlist.length}}</h3></button>
+    <button class="accordion"><h3 style="margin: 0" id="dangerheader">Danger: {{dangerlist.length}}</h3></button>
     <div class="panel">
       <div class="row">
       {{#each dangerlist}}
@@ -289,7 +289,7 @@ figure {
       </div>
     </div>
 
-    <button class="accordion"><h3 style="margin: 0">Active: {{activelist.length}}</h3></button>
+    <button class="accordion"><h3 style="margin: 0" id="activeheader">Active: {{activelist.length}}</h3></button>
     <div class="panel">
 <div class="row">
       {{#each activelist}}
@@ -318,7 +318,7 @@ figure {
       </div>
     </div>
 
-    <button class="accordion"><h3 style="margin: 0">Inactive: {{inactivelist.length}}</h3></button>
+    <button class="accordion"><h3 style="margin: 0" id="inactiveheader">Inactive: {{inactivelist.length}}</h3></button>
     <div class="panel">
 <div class="row">
       {{#each inactivelist}}
@@ -530,13 +530,12 @@ window.setInterval(function () {
     }).done(function (data) {
         bin = data;
 
-        
-        console.log(bin['tochange'])
         if (bin['tochange'] == false && counter >= 1){
-          console.log("yeee")
-          element = $("div[data-id='" + id + "']");
-          console.log(element)
-          element.prev('col-sm-4').remove();
+          element = $("div[data-id='" + plastic_array[0] + "']");
+          parentelement = element[0].parentElement
+          parentelement.remove()
+
+          if (status == )
         }
 
         counter += 1
