--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -238,7 +238,7 @@ figure {
               <div class="well" id="main" data-id="{{dataValues.bin_id}}">
                 <span>
                 <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-                <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
+                <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin({{dataValues.bin_id}})">Clear Bin</button></a></span>
                 <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
                 
                 <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
@@ -268,7 +268,7 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
+              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin({{dataValues.bin_id}})">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
               <img class = "liveVid"width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
@@ -297,7 +297,10 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
+              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin({{dataValues.bin_id}})">Clear Bin</button></a>
+              <br>
+              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-info" style="display: inline-block; float:right;">View Crowd</button></a>
+              </span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
               <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
@@ -326,7 +329,8 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
+              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin({{dataValues.bin_id}})">Clear Bin</button></a>
+              </span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
               <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
@@ -488,6 +492,8 @@ $(window).on("load", function() {
 });
 
 counter = 0
+
+
 window.setInterval(function () {
   var date = new Date();
   var day = days[date.getDay()];
@@ -517,8 +523,9 @@ window.setInterval(function () {
   var inactivecurrentcount = {{inactivelist.length}};
   var activecurrentcount = {{activelist.length}};
   var dangercurrentcount = {{dangerlist.length}};
-  var alertcurrentcount = {{alertlist.length}}
+  var alertcurrentcount = {{alertlist.length}};
 
+ 
   for (var i = 0, len = allmain.length ; i < len; i++) {
       const plastic_child = allmain[i].children[6].id;
       const plastic_p_child = allmain[i].children[5].id;
@@ -528,8 +535,27 @@ window.setInterval(function () {
       const metal_p_child = allmain[i].children[9].id;
       const metal_array = metal_child.split("_");
       const metal_p_array = metal_p_child.split("_");
-
       id = plastic_array[0]
+
+       $("btn btn-success").click(function(e) {
+       
+  event.preventDefault()
+  $.ajax({
+        type: "GET",
+        url: "/bin/updatelevel/"+id,
+        
+        success: function(result) {
+            alert('ok');
+        },
+        error: function(result) {
+            alert('error');
+        }
+    }).done(function (data) {
+        
+    });
+    })
+
+
       $.ajax({
         type: "GET",
         url: '/dashboard/getbin/' + id,
@@ -624,5 +650,5 @@ window.setInterval(function () {
         document.getElementById(metal_p_child).innerHTML = "Metal " + bin["newmetal_level"] + "%"
     });
   }
-}, 30000);
+}, 5000);
 </script>
