--- a/Recyclables/views/bin/addBins.handlebars
+++ b/Recyclables/views/bin/addBins.handlebars
@@ -69,7 +69,12 @@ input {
 			</ol>
 			</div>
 			{{/if}}
-			<h3 class="text-center">Add New Bin</h3>
+
+			{{#if location}}
+			<h3 class="text-center">Update Bin</h3>
+			{{else}}
+			<h3 class="text-center">Add Bin</h3>
+			{{/if}}
 			<form action="" method="post">
 				<div class="form-group">
 					<label for="camera" >Camera Address</label>
@@ -132,7 +137,7 @@ input {
 				<div class="form-group">
 					{{#if binID}}
 							<td>
-								<a href="/bin/updateinformation/{{binID}}"><button class="btn btn-info" style="float: right;" >Submit</button></a>
+								<a href="/bin/updateinformation/{{binID}}"><button class="btn btn-success">Submit</button></a>
 							</td>
 							{{else}}
 							<td>
