--- a/Recyclables/views/model/modelManagement.handlebars
+++ b/Recyclables/views/model/modelManagement.handlebars
@@ -165,8 +165,8 @@ label img {
   </div>
   <div style="overflow:auto;">
     <div style="float:right;">
-      <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-      <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+      <button type="submit" id="submitBtn">Submit</button>
+
     </div>
   </div>
   <!-- Circles which indicates the steps of the form: -->
@@ -232,28 +232,28 @@ label img {
 <script>
 var currentTab = 0; // Current tab is set to be the first tab (0)
 showTab(currentTab); // Display the current tab
-
+console.log(">>>>>>>>>>>>>",listarray.length)
 function showTab(n) {
 
   // This function will display the specified tab of the form...
   var x = document.getElementsByClassName("tab");
   x[n].style.display = "block";
   //... and fix the Previous/Next buttons:
-  if (n == 0) {
-    document.getElementById("prevBtn").style.display = "none";
+  if (listarray.length == 0) {
+    document.getElementById("submitBtn").style.display = "none";
   } else {
-    document.getElementById("prevBtn").style.display = "inline";
+    document.getElementById("submitBtn").style.display = "inline";
   }
   if (n == (x.length - 1)) {
-    document.getElementById("nextBtn").innerHTML = "Submit";
+    document.getElementById("submitBtn").innerHTML = "Submit";
   } else {
-    document.getElementById("nextBtn").innerHTML = "Next";
+    document.getElementById("submitBtn").innerHTML = "Next";
   }
   //... and run a function that will display the correct step indicator:
   fixStepIndicator(n)
 }
 
-function nextPrev(n) {
+{{!-- function nextPrev(n) {
   // This function will figure out which tab to display
   var x = document.getElementsByClassName("tab");
   // Exit the function if any field in the current tab is invalid:
@@ -270,7 +270,7 @@ function nextPrev(n) {
   }
   // Otherwise, display the correct tab:
   showTab(currentTab);
-}
+} --}}
 
 function validateForm() {
   // This function deals with validation of the form fields
