--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -238,7 +238,7 @@ figure {
               <div class="well" id="main" data-id="{{dataValues.bin_id}}">
                 <span>
                 <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-                <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="re('{{dataValues.bin_id}}')">Clear Bin</button>
+                <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin('{{dataValues.bin_id}}')">Clear Bin</button>
                 <br>
               <a href="/dashboard/location?loc={{dataValues.bin_id}}"><button type="button" class="btn btn-info" style="display: inline-block; float:right;">View Crowd</button></a>
               </span>
@@ -271,7 +271,7 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="re('{{dataValues.bin_id}}')">Clear Bin</button>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin('{{dataValues.bin_id}}')">Clear Bin</button>
               <br>
               <a href="/dashboard/location?loc={{dataValues.bin_id}}"><button type="button" class="btn btn-info" style="display: inline-block; float:right;">View Crowd</button></a>
 </span>
@@ -303,7 +303,7 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="re('{{dataValues.bin_id}}')">Clear Bin</button></a>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin('{{dataValues.bin_id}}')">Clear Bin</button></a>
               <br>
               <a href="/dashboard/location?loc={{dataValues.bin_id}}"><button type="button" class="btn btn-info" style="display: inline-block; float:right;">View Crowd</button></a>
               </span>
@@ -335,7 +335,7 @@ figure {
             <div class="well" id="main" data-id="{{dataValues.bin_id}}">
               <span>
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;" onclick="clearBin({{dataValues.bin_id}})">Clear Bin</button></a>
+              <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a>
               </span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
               <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
@@ -374,7 +374,7 @@ figure {
     window.location.href = `/dashboard/location?loc=${$(tgt).data("id")}`
   })
 
-
+//get accordion box
   var acc = document.getElementsByClassName("accordion");
   var i;
 
@@ -389,7 +389,7 @@ figure {
       } 
     });
   }
-
+//get all elements in accordion box and store as variable
   var allmain = document.querySelectorAll("[id='main']");
   for (var i = 0, len = allmain.length ; i < len; i++) {
       const plastic_child = allmain[i].children[6].id;
@@ -397,7 +397,10 @@ figure {
       const plastic_array = plastic_child.split("_");
       const plastic_p_array = plastic_p_child.split("_");
 
+      //calculate amount of plastic in smart bin in percantage
+
       var plastic_value = Math.round(plastic_array[1] / plastic_array[2] * 100)
+
       if (plastic_value > 100){
         plastic_value = 100
       }
@@ -405,6 +408,7 @@ figure {
         plastic_value = 1
       }
 
+      //change color of bar graph based on plastic level of bin 
       var plastic_level = null;
       if (plastic_value < 50){
         plastic_level = "Green"
@@ -415,6 +419,7 @@ figure {
       else if (plastic_value >= 75){
         plastic_level = "Red"
       }
+      //show percentage level of plastic for each bin
 
       document.getElementById(plastic_child).style.width = plastic_value + "%"
       document.getElementById(plastic_child).style.backgroundColor = plastic_level
@@ -428,6 +433,7 @@ figure {
       const metal_array = metal_child.split("_");
       const metal_p_array = metal_p_child.split("_");
 
+      // calculate amount of metal in smart bin in percantage
       var metal_value = Math.round(metal_array[1] / metal_array[2] * 100)
       if (metal_value > 100){
         metal_value = 100
@@ -436,6 +442,7 @@ figure {
         metal_value = 1
       }
 
+      //change color of bar graph based on plastic level of bin
       var metal_level = null;
       if (metal_value < 50){
         metal_level = "Green"
@@ -446,11 +453,14 @@ figure {
       else if (metal_value >= 75){
         metal_level = "Red"
       }
+      //show percentage level of plastic for each bin
+
       document.getElementById(metal_child).style.width = metal_value + "%"
       document.getElementById(metal_child).style.backgroundColor = metal_level
       document.getElementById(metal_p_child).innerHTML = "Metal " + metal_value + "%"
   }
 
+  //show current date 
   var months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
   var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
   var date = new Date();
@@ -482,18 +492,18 @@ figure {
   
 </script>
 <script type="text/javascript">
-
-function re(weh){
-    console.log(weh)
+//onlick call clear bin route in bin route
+function clearBin(idOfBin){
     $.ajax({
         type: "GET",
-        url: '/bin/updatelevel/' + weh,
+        url: '/bin/updatelevel/' + idOfBin,
     }).done(function (data) {
         console.log(data)
     });
   }
 
 var error = 0
+
 function calculate(){
   var total = {{alertlist.length}} + {{dangerlist.length}} + {{activelist.length}} + {{inactivelist.length}}
   var percount = Math.round(100 / total)
@@ -502,7 +512,7 @@ function calculate(){
 
   document.getElementById("file").style.width = error+"%";
 }
-
+//show loading bar
 $(window).on("load", function() {
     document.getElementById("myProgress").style.removeProperty('margin-top');
     document.getElementById("myProgress").style.removeProperty('margin-left');
@@ -512,8 +522,9 @@ $(window).on("load", function() {
 
 counter = 0
 
-
+//updates the following every 5 seconds
 window.setInterval(function () {
+  //show current date to indicate when it is last updated
   var date = new Date();
   var day = days[date.getDay()];
   var dates = date.getDate();
@@ -539,6 +550,7 @@ window.setInterval(function () {
   x.innerText = day + ", " + dates + " " + month + " " + year + " " + hr + ":" + min + ampm ;
   var allmain = document.querySelectorAll("[id='main']");
 
+  //moves bins in the accordian if their status changed 
   var inactivecurrentcount = parseInt(document.getElementById("inactiveheader").innerText.replace("Inactive: ", ""));
   var activecurrentcount = parseInt(document.getElementById("activeheader").innerText.replace("Active: ", ""));
   var dangercurrentcount = parseInt(document.getElementById("dangerheader").innerText.replace("Danger: ", ""));
@@ -546,6 +558,8 @@ window.setInterval(function () {
 
  
   for (var i = 0, len = allmain.length ; i < len; i++) {
+//get all elements of bin in accordion box and store as variable
+
       const plastic_child = allmain[i].children[6].id;
       const plastic_p_child = allmain[i].children[5].id;
       const plastic_array = plastic_child.split("_");
@@ -556,19 +570,20 @@ window.setInterval(function () {
       const metal_p_array = metal_p_child.split("_");
       id = plastic_array[0]
 
-
+      //calls the getBin route in dashboard.js
       $.ajax({
         type: "GET",
         url: '/dashboard/getbin/' + id,
     }).done(function (data) {
         bin = data;
+          //if status in the bin changes(from active or < 50% items to > 50% for either plastic or metal)
+          //then removes the bin in current accordion box and put it in the accordion box with matching status 
 
         if (bin['tochange'] == false && counter >= 1){
           element = $("div[data-id='" + plastic_array[0] + "']");
           parentelement = element[0].parentElement
           parentelement.remove()
           console.log(bin['status'])
-
           if (bin['status'] == 0){
             inactivecurrentcount = inactivecurrentcount - 1
             document.getElementById('inactiveheader').innerHTML = "Inactive: " + inactivecurrentcount
