--- a/Recyclables/views/user/locationview.handlebars
+++ b/Recyclables/views/user/locationview.handlebars
@@ -245,6 +245,8 @@ function switchView(view){
     var randomVids = [
         "/video/1.mp4",
         "/video/2.mp4",
+        "/video/3.mp4",
+        "/video/4.mp4",
     ]
     if(view != 0){
         video.srcObject = null;
